ingress/webserver-green.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webserver-green
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webserver-green
    spec:
      containers:
      - name: webserver-green
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hostvol-green
          mountPath: /usr/share/nginx/html
      volumes:
      - name: hostvol-green
        hostPath:
          path: /home/docker/vol-green
