ingress/webserver-blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-blue-svc
  labels:
    run: webserver-blue-svc
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: webserver-blue
