ingress/webserver-green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-green-svc
  labels:
    run: webserver-green-svc
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: webserver-green
